--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper, 12pt]{article}
 
 \newcommand{\templates}{../../template}
+\usepackage[hidelinks]{hyperref}
 \input{\templates/style}
 \input{\templates/front_page}
 \input{\templates/history}
@@ -8,7 +9,7 @@
 \settitolo{Norme di progetto}
 \setprogetto{ShopChain}
 \setcommittenti{SyncLab}
-\setredattori{Elia Scandaletti \\ Raffaele Oliviero \\ Giovanni Cocco}
+\setredattori{Elia Scandaletti \\ Raffaele Oliviero \\ Giovanni Cocco \\ Alberto Nicoletti}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto. 
@@ -24,6 +25,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.7}{04/02/2022}{Giovanni Cocco}{Redazione}{Stesure di \ref{revisioni-di-avanzamento-interne}}
 \addversione{0.0.8}{08/02/2022}{Raffaele Oliviero}{Redazione}{Stesura di \ref{analisi-dei-requisiti}, \ref{analisi-delle-tecnologie} e \ref{piano-di-progetto}}
 \addversione{0.0.9}{16/02/2022}{Giovanni Cocco}{Redazione}{Stesura di \ref{norme-sw}}
+\addversione{2.0.0}{20/03/2022}{Alberto Nicoletti}{Redazione}{Rifacimento documento e stesura \ref{fornitura}}
 
 \begin{document}
 
@@ -31,12 +33,28 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 
 \makeversioni
 
+\tableofcontents
+\pagebreak
+
 \section{Introduzione}
 \subsection{Scopo del documento}
 Lo scopo del presente documento è definire procedure, strumenti e criteri di qualità al fine di stabilire un Way of Working. Ogni membro del gruppo sarà tenuto a rispettare le indicazioni qui presentate.
 
-\section{Processi di supporto}
+\section{Processi Primari}
+\subsection{Fornitura}\label{fornitura}
 
+\subsection{Sviluppo}
+
+\section{Processi di supporto}
+\subsection{Documentazione}
+\subsection{Verifica}
+
+\section{Processi organizzativi}
+\subsection{Gestione dei processi}
+\subsection{Miglioramento dei processi}
+
+\pagebreak
+\section{norme vecchie}
 \subsection{Documentazione}\label{documentazione}
 
 \subsubsection{Strumenti utilizzati}
@@ -249,7 +267,7 @@ Alcuni comandi utili sono:
 \item \textbf{Push su un branch già esistente:} \texttt{git push}.
 \end{itemize}
 
-\section{Workflow di lavoro}
+\section{(vecchio)Workflow di lavoro}
 \subsection{Versionamento}
 
 Ogni modifica alla repository dovrà seguire i seguenti passaggi:
@@ -290,7 +308,7 @@ Per lo sviluppo del codice valgono le seguenti regole:
     \item non lasciare nulla di implicito, sia per visibilità che per tipi.
 \end{itemize}
 
-\section{Tracciamento dei progressi}
+\section{(vecchio)Tracciamento dei progressi}
 Per tracciare l'avanzamento del progetto, oltre alla dashboard nel \textit{Piano di Progetto}, verrà utilizzato il sistema di issues e di milestone di GitHub.
 
 Il \textit{Piano di Progetto} definisce quali sono le milestone.
