--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -42,7 +42,19 @@ Lo scopo del presente documento è definire procedure, strumenti e criteri di qu
 
 \section{Processi Primari}
 \subsection{Fornitura}\label{fornitura}
+Il processo di fornitura determina le attività e le risorse che servo per gestire e assicurare il progetto. In qusta sezione vengono stilate le norme per la gestione dei rapporti con il proponente ed il committente.
+\subsubsection{Repository pubblica}
+Durante tutto il progetto verrà usata un' unica repository pubblica. La parte di repository che interessa al proponente ed al committente è la cartella \textit{public} definita come parte pubblica della repository. Questa cartella contiene un file read-me in cui viene spiegato ed elencato il contenuto della parte pubblica con un avviso che chiede di restarne all'interno, ignorando il resto della repository, detta parte privata.\\\\
+La parte pubblica contiene i documenti necessari alle revisioni di periodo con il committente.\\
+Ogni file nella parte pubblica deve indicare la versione nel nome del file stesso.\\
+Ogni modifica alla parte pubblica deve essere approvata dal responsabile, cui spetta accettare le pull request della parte pubblica.
+\subsubsection{Contatti con proponente e committente}
 
+Tutti i contatti con il proponente ed il committente avvengono tramite la mail del gruppo \textit{winnningsoftwaresolution@gmail.com}.\\\\
+L'invio di una mail nasce dalla richiesta di uno o più componenti del gruppo e necessita di una discussione con il responsabile e della sua approvazione.\\\\
+Le mail per la presentazione ad una revisione di periodo necessita della conferma di tutti i componenti, che valutano l'effettiva preparazione del gruppo per la revisione. Questa mail deve contenere la lettera di presentazione con il link alla parte pubblica della repository.\\\\
+I colloqui devono essere richiesti tramite mail. La reale necessita di un colloquio va discussa durante la riunione settimanale.\\\\
+I colloqui con il proponente si svologo su meet o su discord. I colloqui con il committente si svolgono su zoom.
 \subsection{Sviluppo}
 
 \section{Processi di supporto}
