aggiunti processi organizzativi

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -12,7 +12,7 @@
 \setredattori{Elia Scandaletti \\ Raffaele Oliviero \\ Giovanni Cocco \\ Alberto Nicoletti}
 \setdestuso{interno}
 \setdescrizione{
-Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto. 
+Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto.
 }
 
 \addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura \ref{documentazione}}
@@ -51,7 +51,29 @@ Lo scopo del presente documento è definire procedure, strumenti e criteri di qu
 
 \section{Processi organizzativi}
 \subsection{Gestione dei processi}
+È stato scelto il modello Scrum con sprint di durata settimanale.
+Si è deciso di effettuare una riunione interna ogni mercoledì dove discutere dei seguenti punti:
+\begin{itemize}
+\item resoconto degli sprint precedenti;
+\item eventuali problemi riscontrati e soluzioni adottate;
+\item resoconto di ore e costi per ogni componente;
+\item pianificazione prossimi sprint;
+\end{itemize}
+I resoconti dovranno essere preparati dai singoli membri prima di ogni esposizione.\\
+Ogni incontro dovrà produrre un aggiornamento delle milestones (e diagramma di Gantt).\\
+La pianificazione dei prossimi sprint consisterà nel dividere il lavoro in item e decidere il numero di membri adatto per item.\\
+Ogni ciclo di Scrum prevederà un nuovo responsabile, scelto per cognome in ordine alfabetico.\\
+Il responsabile dovrà assegnare le persone agli item considerando la rotazione dei ruoli.\\
+Il responsabile dovrà poi creare le issues su GitHub relative agli item e assegnarvici i membri.\\
+Le issues dovranno essere collegate alle milestones di appartenenza dal responsabile.\\
+Il responsabile si occuperà di aggiornare preventivo e consultivo totale, compilando nel PdP la sezione del ciclo di Scrum corrispondente.\\
+È stato inoltre deciso che in caso di problemi singolarmente insormontabili andrà notificato il responsabile su Telegram che si occuperà di assegnare
+un membro per la risoluzione.\\
+Il responsabile dovrà creare la issue su GitHub relativa al problema assegnandovici la persona scelta.\\
+Le soluzioni adottate per la risoluzione del problema andranno documentate dal responsabile stesso.\\
+
 \subsection{Miglioramento dei processi}
+Durante l'incontro settimanale verrà discusso il lavoro fatto fino ad ora ed eventuali migliorie applicabili.
 
 \pagebreak
 \section{norme vecchie}
@@ -244,7 +266,7 @@ Il titolo del documento è ``Analisi delle tecnologie".
 Il file sarà chiamato \texttt{analisi\_delle\_tecnologie.tex}.
 
 \subsection{Verifica e Validazione}\label{verifica-e-validazione}
-Ogni prodotto per essere accettato nel branch \texttt{main} deve rispettare i requisiti minimi definiti dal \textit{Piano di Qualifica}. 
+Ogni prodotto per essere accettato nel branch \texttt{main} deve rispettare i requisiti minimi definiti dal \textit{Piano di Qualifica}.
 
 A tal fine, verrà predisposto un insieme di test per rendere automatica, in toto o in parte, la verifica e la validazione dei prodotti.
 
