Aggiunto link StarUML

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -71,8 +71,8 @@ Fonti da cui rilevare le informazioni:
 	\item Descrizione del documento
 	\item Casi d'uso
 	\begin{itemize}
-		\item Utilizzare il programma StarUML per il disegno dei diagrammi.
-		\item Esportare i diagrammi in formato SVG.
+		\item Utilizzare il programma \href{https://staruml.io/}{\textit{\underline{StarUML}}} per il disegno dei diagrammi.
+		\item Esportare i diagrammi in formato \textit{SVG}.
 		\item Numerare ogni caso d'uso come \textit{UCX} nel caso di caso d'uso senza padri. 
 		Numerare \textit{UCX.x} ogni caso d'uso figlio di X.\\
 		Dove \textit{X} e \textit{x} sono numeri interi positivi $>$= 1, progressivi.\\
