Aggiunto versionamento successivo

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -9,7 +9,7 @@
 \settitolo{Norme di progetto}
 \setprogetto{ShopChain}
 \setcommittenti{SyncLab}
-\setredattori{Elia Scandaletti \\ Raffaele Oliviero \\ Giovanni Cocco \\ Alberto Nicoletti}
+\setredattori{Elia Scandaletti \\ Raffaele Oliviero \\ Giovanni Cocco \\ Alberto Nicoletti \\ Andrea Volpe}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto. 
@@ -26,6 +26,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.8}{08/02/2022}{Raffaele Oliviero}{Redazione}{Stesura di \ref{analisi-dei-requisiti}, \ref{analisi-delle-tecnologie} e \ref{piano-di-progetto}}
 \addversione{0.0.9}{16/02/2022}{Giovanni Cocco}{Redazione}{Stesura di \ref{norme-sw}}
 \addversione{2.0.0}{20/03/2022}{Alberto Nicoletti}{Redazione}{Rifacimento documento e stesura \ref{fornitura}}
+\addversione{2.0.1}{22/03/2022}{Andrea Volpe}{Redazione}{Stesure di \ref{processi-primari-sviluppo}}
 
 \begin{document}
 
@@ -43,7 +44,7 @@ Lo scopo del presente documento è definire procedure, strumenti e criteri di qu
 \section{Processi Primari}
 \subsection{Fornitura}\label{fornitura}
 
-\subsection{Sviluppo}
+\subsection{Sviluppo}\label{processi-primari-sviluppo}
 \subsubsection{Gestione}
 \paragraph{Gestione tempistiche}
 \begin{itemize}
