--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -48,8 +48,8 @@ Il metodo di lavoro fa uso del framework SCRUM. Si farà inoltre uso della tecni
 Questo metodo si presta meglio di un modello a cascata data la difficoltà di realizzare una pianificazione accurata a monte con tecnologie poco conosciute.\\\\
 Tuttavia si terrà che:
 \begin{itemize} 
-    \item dei cicli non vadano a buon fine portanto a iterazioni (ove incrementi sono sempre preferibili);
-    \item delle attività critiche blocchino le altre portanto a una perdita di parallelismo all'interno del gruppo.
+    \item dei cicli non vadano a buon fine portando a iterazioni (ove incrementi sono sempre preferibili);
+    \item delle attività critiche blocchino le altre portando a una perdita di parallelismo all'interno del gruppo.
 \end{itemize}
 I cicli di SCRUM avverranno ad intervalli settimanali, ogni ciclo inizia con una riunione che comprende:
 \begin{itemize}
@@ -65,7 +65,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino all'RTB.
 
 \subsection{Ciclo 0}
 \textbf{Data di inizio:} 9-11-2021\\
-\textbf{Data di fine pianficata:} 23-03-2022\\
+\textbf{Data di fine pianificata:} 23-03-2022\\
 \textbf{Data di fine effettiva:} N/A
 
 \subsubsection{Pianificazione}\mbox{}
@@ -191,9 +191,9 @@ Il primo ciclo sarà riassuntivo del lavoro fino all'RTB.
         \hline
         Necessità di meglio organizzare i documenti & Aumento dei tempi e costi inizialmente, poi la miglior documentazione porterà a un più celere sviluppo\\
         \hline
-        Miglior compresione delle tecnologie & Diminuzione delle ore previste di programmazione\\
+        Miglior comprensione delle tecnologie & Diminuzione delle ore previste di programmazione\\
         \hline
-        Miglior compresione del capitolato & Pianificazione più accurata e minor incertezza futura\\
+        Miglior compresone del capitolato & Pianificazione più accurata e minor incertezza futura\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
