--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -52,7 +52,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \ganttbar{CA}{2022-04-15}{2022-04-29}
 \end{ganttchart}
 
-\subsection{Consultivo attuale}
+\subsection{Consuntivo attuale}
 \subsection{Preventivo a finire}
 
 \section{Metodo di lavoro}
