--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -39,6 +39,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \clearpage
 
 \section{Pianificazione generale}
+
 \subsection{Diagramma di Gannt}
 \begin{ganttchart}[
     hgrid,
@@ -53,7 +54,60 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \end{ganttchart}
 
 \subsection{Consuntivo attuale}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 40  & 1200\\
+        \hline
+        Amministratore  & 20 & 60  & 1200\\
+        \hline
+        Analista        & 25 & 60  & 1500\\
+        \hline
+        Progettista     & 25 & 80  & 2000\\
+        \hline
+        Programmatore   & 15 & 45  & 675\\
+        \hline
+        Verificatore    & 15 & 20  & 300\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 305 & 6875\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
 \subsection{Preventivo a finire}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 50  & 1500\\
+        \hline
+        Amministratore  & 20 & 40  & 800\\
+        \hline
+        Analista        & 25 & 60  & 1500\\
+        \hline
+        Progettista     & 25 & 50  & 1250\\
+        \hline
+        Programmatore   & 15 & 135  & 2025\\
+        \hline
+        Verificatore    & 15 & 80  & 1200\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 415 & 8275\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
 
 \section{Metodo di lavoro}
 Il metodo di lavoro fa uso del framework SCRUM. Si farà inoltre uso della tecnica di Continuos Integration.\\
