--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -84,14 +84,14 @@ I parametri saranno calcolati:
 
 \section{Software}
 \subsection{Requisiti minimi}
-Il sofware dovrà essere coperto almeno per l'80\% da test come richiesto dal proponente.\\\\
+Il software dovrà essere coperto almeno per l'80\% da test come richiesto dal proponente.\\\\
 A questo scopo saranno creati appositi test automatici per verificare la correttezza del prodotto al momento della PR.\\
 L'insieme dei test verrà usato per assicurarsi di non introdurre regression durante lo sviluppo.
 
 \subsection{Stato attuale}
 \begin{tabular}{|l|l|}\hline
 	Data & Stato \\\hline
-	4/2/2022 & Creato PoC di test per il server (jtest)\\\hline
+	4/2/2022 & Creato PoC di test per il server (JTest)\\\hline
 \end{tabular}
 
 \subsection{Aspettative di miglioramento}
